@@ -3,7 +3,9 @@
 *******************************************************************************
 
 === 1.0.14 ===
-* Fixed non-working solo button after 1.2.6 release.
+* Fixed regression: non-working solo button after 1.2.6 release.
+* Added display of filter number, filer channel and filter type near to the
+  frequency and note.
 * Updated build scripts and dependencies.
 
 === 1.0.13 ===
